
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ uint8 ;
typedef int * STREAM ;


 scalar_t__ ISO_PDU_DT ;
 int error (char*,scalar_t__) ;
 int * iso_recv_msg (scalar_t__*) ;

STREAM
iso_recv(void)
{
 STREAM s;
 uint8 code;

 s = iso_recv_msg(&code);
 if (s == ((void*)0))
  return ((void*)0);

 if (code != ISO_PDU_DT)
 {
  error("expected DT, got 0x%x\n", code);
  return ((void*)0);
 }

 return s;
}
